<resources>
    <string name="app_name">Intruder Alert - Who Touched</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptyIntrusion">No Intruder Found</string>
    <string name="Add_Widget">Add Widget</string>
    <string name="Alarm">Alarm</string>
    <string name="turn_on">Turn On</string>
    <string name="intruder">Intruder </string>
    <string name="Fingerprint_lock_text">Fingerprint Lock</string>
    <string name="description">Enable fingerprint to protect your app from unauthorized access.</string>
    <string name="enable_now">Enable Now</string>
    <string name="fgNotificationTitle">Third Eye is Active</string>
    <string name="fgNotifictaionText">Watching for Intrusions\n</string>
    <string name="IntrusionNotificationTitle">Intruion Detected!</string>
    <string name="intruderNotifiationText">SomeoneTried To Unlocl Your Phone Check Out!</string>
    <string name="finger_print_lock">Finger Print Lock</string>
    <string name="protect_app_from_intruders">Protect App From Intruders</string>
    <string name="advance">Advance</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="your_plan_billing_and_renewal_info">Your plan ,billing and renewal info</string>
    <string name="general">General</string>
    <string name="intruder_selfie">Intruder Selfie</string>
    <string name="take_photos_after_01_wrong_attempts">Take Photos after 01 wrong attempts</string>
    <string name="picture_delay">Picture Delay</string>
    <string name="delayText">Setting this value to less than 1000ms may cause .</string>
    <string name="widget_setup">Widget Setup</string>
    <string name="add_widget">Add Widget</string>
    <string name="how_to_add_widget">How to add widget?</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="intruders">Intruders</string>
    <string name="not_intruder_found">Not Intruder Found</string>
    <string name="emptydescription">if someone tries to open we will </string>
    <string name="alarmtitle">Enable Audible Alarm</string>
    <string name="attempt">Get loud alert on wrong attempt</string>
    <string name="select_alarm">Select Alarm</string>
    <string name="beep">Beep</string>
    <string name="configuration">Configuration</string>
    <string name="audible_alarm">Audible Alarm</string>
    <string name="permissions">Set Up Permissions</string>
    <string name="permdescription">To enable intruder alert please allow us</string>
    <string name="allow">Allow</string>
    <string name="unlock_app">Unlock App</string>
    <string name="bioMetricError">Authentication error </string>
    <string name="biometricDescription">User Your Finger Prints To Unlock the App</string>
    <string name="noBMHA">No biometric hardware available</string>
    <string name="noBmh">Device Has no Biometric Hardware</string>
    <string name="addFingerPrint">Biometric authentication is not set up. You can enable it from your device settings</string>
    <string name="history">History</string>
    <string name="seewho">See who tried to unlock Your phone</string>
    <string name="addTitle">Add Intruder Widget Now</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="noIntdes">It looks like there is problem with your Internet Connection Please Check your Network</string>
    <string name="get_started">Get Started</string>
    <string name="selected_ringtone">Select Intrusion Ringtone</string>
    <string name="lockeImg">Limit Reached.You can view only 3 intruders for free</string>
    <string name="emptyIntruders">No Intruders Found</string>
    <string name="settings">Settings</string>
    <string name="delete_description">Are you sure you want to permanently delete this?</string>
    <string name="delete_photo">Delete Photo?</string>
    <string name="delete">Delete</string>
    <string name="no_intrusions">No Intrusions</string>
    <string name="enjoy">Enjoy All Features Ads Free,Unlimited</string>
    <string name="adfre">Enjoy 100% ads free experience</string>
    <string name="unlimited">Unlimited Intruder Detection</string>
    <string name="hide">Hide App behind smart fake icons</string>
    <string name="sub">Auto renewable ,Cancel anytime before 24 hours subscription ends</string>
    <string name="limit">Set wrong attempts limit to capture intruder image</string>
    <string name="safa">Confirm your identity using your figner print to unlock app safely and quickly</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
</resources>