<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/reltive"


        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/close_btn" />


        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cancel"
            android:layout_centerHorizontal="true"
            android:src="@drawable/paywallicon" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/title"
                style="@style/ToobarTitle"
                android:layout_below="@id/icon"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="10dp"
                android:text="Intruder Selfie"
                android:textSize="20sp" />

            <Button
                style="@style/premiumButton"
                android:layout_width="wrap_content"
                android:layout_below="@id/icon"
                android:layout_alignRight="@id/title"
                android:layout_alignParentRight="true"
                android:drawableLeft="@drawable/premiumicon"
                android:text="PRO" />
        </LinearLayout>

        <TextView
            android:id="@+id/text"
            style="@style/DescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout"
            android:layout_centerHorizontal="true"
            android:text="@string/enjoy" />

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/tick"
                style="@style/ToobarTitle"
                android:text="@string/adfre" />

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                style="@style/ToobarTitle"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/tick"
                android:text="@string/unlimited" />

            <TextView
                style="@style/ToobarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/tick"
                android:text="@string/hide" />


        </LinearLayout>


    </RelativeLayout>


    <RadioGroup
        android:id="@+id/rgPlans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reltive" />
    <TextView
        android:id="@+id/des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        style="@style/DescriptionText"/>


    <Button
        android:id="@+id/btnContinue"
        style="@style/premiumButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
