<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:layout_gravity="bottom"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    >



    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/close_btn"
            android:clickable="true"
            android:focusable="true" />
        <LinearLayout
            android:layout_below="@id/closeButton"
            android:id="@+id/above"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <TextView

                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmtitle"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DescriptionText"
                android:text="@string/attempt"
                />



        </LinearLayout>



        <LinearLayout
            android:id="@+id/fingerprintContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/above"

            android:orientation="vertical"
            >


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="18dp"
                >

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/alramimg"
                    />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:layout_below="@id/fingerprintContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:text="@string/enable_now"
            android:id="@+id/addWidget"/>



    </RelativeLayout>

</androidx.cardview.widget.CardView>

