<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/appBgColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <RelativeLayout
            android:id="@+id/toolbarContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
          >

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ep_back"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/ToobarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/backIcon"
                android:layout_marginStart="12dp"
                android:text="@string/intruders"/>

            <ImageView
                android:id="@+id/camouflageIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/histotyicon"
                android:clickable="true"
                android:focusable="true"/>

        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height=".6dp"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar"
        android:background="@color/dividerColor" />

    <androidx.recyclerview.widget.RecyclerView
        android:padding="5dp"

        android:id="@+id/intruderRv"
        tools:listitem="@layout/intruder_img_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:visibility="gone"
        android:padding="5dp"
        android:id="@+id/emptyLayout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        
        <ImageView
            android:src="@drawable/emptyicon"
            android:layout_width="70dp"
            android:layout_height="70dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_intruder_found"
            style="@style/BoldText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emptydescription"/>



        
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
